deep learning models added

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,16 +2,14 @@ __pycache__/
 *.pyc
 *.pyo
 *.pyd
-*.swp
-*.swo
-.env
 .venv
 venv
+.env
 .git
-.gitlab-ci.yml
-.idea
-.vscode
-*.xlsx
-*.csv
-*.zip
-.DS_Store
+.gitignore
+.mypy_cache/
+.pytest_cache/
+dist/
+build/
+
+
