--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,11 @@ PyYAML==6.0.2
 xgboost>=2.0.0
 lightgbm>=4.3.0
 catboost>=1.2.2
+torch==2.3.1
+torchvision==0.18.1
+torchaudio==2.3.1
 joblib>=1.3.2
 openpyxl==3.1.5
 category_encoders==2.8.1
 requests==2.32.4
 tensorboardX==2.6.4
-
-
